--- a/playbooks/roles/proxy/templates/kube/nginx/locations/site-router-token-check.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/site-router-token-check.conf
@@ -41,6 +41,6 @@ location /_auth {
     proxy_set_header Host $host;
     proxy_set_header Content-Length "";
     proxy_set_header X-Tapis-Token $http_x_tapis_token;
-    proxy_pass http://site-router:8000/v3/site-router/tokens/check;
+    proxy_pass http://site-router-api:8000/v3/site-router/tokens/check;
 }
 
