templating kube nginx

--- a/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
@@ -78,7 +78,7 @@ http {
 
     #gzip  on;
 
-    include /etc/nginx/conf.d/*.conf;
+    #include /etc/nginx/conf.d/*.conf;
 
     # Redirect all non-encrypted traffic to the encrypted site.
     server
