--- a/playbooks/roles/proxy/templates/kube/nginx/locations/sites.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/sites.conf
@@ -6,8 +6,8 @@ location /v3/sites
     error_page 500 /token-revoked.json; 
 
     # use var to allow nginx to start even if $upstream is down
-    set $upstream http://tenants-api:5000;
-    proxy_pass $upstream;
+    proxy_pass http://tenants-api:5000;
+    
 
     proxy_redirect off;
     proxy_set_header Host localhost:5000;
