--- a/playbooks/roles/proxy/templates/kube/nginx/deploy.yml
+++ b/playbooks/roles/proxy/templates/kube/nginx/deploy.yml
@@ -27,6 +27,8 @@ spec:
           mountPath: /tmp/ssl
         - name: locations
           mountPath: /etc/nginx/conf.d/locations
+        - name: custom-locations
+          mountPath: /etc/nginx/conf.d/locations
         - name: revoke-error
           mountPath: /etc/nginx/html/token-revoked.json
           subPath: token-revoked.json
@@ -40,6 +42,9 @@ spec:
       - name: locations
         configMap:
           name: tapis-nginx-locations
+       - name: custom-locations
+        configMap:
+          name: tapis-nginx-custom-locations
       - name: certs
         secret: 
           secretName: tapis-tls-cert
