--- a/playbooks/roles/proxy/templates/kube/nginx/locations/pods.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/pods.conf
@@ -3,8 +3,7 @@ location /v3/pods
 {            
 
     # use var to allow nginx to start even if $upstream is down
-    set $upstream {{ proxy_service_url }};
-    proxy_pass $upstream;
+    proxy_pass {{ proxy_service_url }};
 
     proxy_redirect off;
     proxy_set_header Host $host;
