--- a/playbooks/roles/proxy/templates/kube/nginx/locations/streams.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/streams.conf
@@ -5,8 +5,7 @@ location /v3/streams
     error_page 500 /token-revoked.json; 
 
     # use var to allow nginx to start even if $upstream is down
-    set $upstream http://streams-api:5000;
-    proxy_pass $upstream;
+    proxy_pass http://streams-api:5000;
 
     proxy_redirect off;
     proxy_set_header Host $host;
