--- a/playbooks/roles/proxy/templates/kube/nginx/locations/workflows.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/workflows.conf
@@ -5,8 +5,7 @@ location /v3/workflows
     error_page 500 /token-revoked.json; 
 
     # use var to allow nginx to start even if $upstream is down
-    set $upstream http://workflows-api-service:8000;
-    proxy_pass $upstream;
+    proxy_pass http://workflows-api-service:8000;
 
     proxy_redirect off;
     proxy_set_header Host $host;
