--- a/playbooks/roles/proxy/templates/kube/nginx/locations/globus-proxy.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/globus-proxy.conf
@@ -2,9 +2,7 @@
 location /v3/globus-proxy
 {            
 
-    # use var to allow nginx to start even if $upstream is down
-    set $upstream http://globus-proxy:5000;
-    proxy_pass $upstream;
+    proxy_pass http://globus-proxy:5000;
 
     proxy_redirect off;
     proxy_set_header Host $host;
