--- a/playbooks/roles/proxy/templates/kube/nginx/locations/site-router.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/site-router.conf
@@ -3,9 +3,7 @@ location /v3/site-router
 {
     # this location intentionally does NOT get an auth_request directive since the site-router endpoints IS the target of auth_request.
 
-    # use var to allow nginx to start even if $upstream is down
-    set $upstream http://site-router-api:8000;
-    proxy_pass $upstream;
+    proxy_pass http://site-router-api:8000;
     proxy_redirect off;
     proxy_set_header Host $host;
 }
