--- a/playbooks/roles/proxy/templates/kube/nginx/locations/jobs.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/jobs.conf
@@ -4,9 +4,7 @@ location /v3/jobs
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
-    # use var to allow nginx to start even if $upstream is down
-    set $upstream http://jobs-api:8080;
-    proxy_pass $upstream;
+    proxy_pass http://jobs-api:8080;
 
     proxy_redirect off;
     proxy_set_header Host $host;
