--- a/playbooks/roles/proxy/templates/kube/nginx/locations/pgrest.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/pgrest.conf
@@ -5,9 +5,7 @@ location /v3/pgrest
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
-    # use var to allow nginx to start even if $upstream is down
-    set $upstream http://pgrest-api:5000;
-    proxy_pass $upstream;
+    proxy_pass http://pgrest-api:5000;
 
     proxy_redirect off;
     proxy_set_header Host $host;
