--- a/playbooks/roles/proxy/templates/kube/nginx/locations/meta.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/meta.conf
@@ -1,13 +1,23 @@
 
 # meta
-location /v3/meta
-{            
-    auth_request /_auth;
-    error_page 500 /token-revoked.json; 
 
-    # use var to allow nginx to start even if $upstream is down
-    proxy_pass http://meta:8080;
+{% if "meta" in proxy_nginx_service_list or site_type == 2 %}
+	# meta
+        location /v3/meta
+        {
+{% if "meta" in proxy_nginx_service_list %}
+            auth_request /_auth;
+            error_page 500 /token-revoked.json; 
+{% if proxy_meta_custom_block is defined %}
+            {{ proxy_meta_custom_block | indent(width=12) }}
+{% endif %}
+            proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_pass http://restheart-security:8080;
+{% else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}
+        }
+{% endif %}
 
-    proxy_redirect off;
-    proxy_set_header Host $host;
-}
+
