--- a/playbooks/roles/proxy/templates/kube/nginx/locations/authenticator.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/authenticator.conf
@@ -1,21 +1,22 @@
 # authenticator
 location /v3/oauth2
-{            
+{
+{% if "authenticator" in proxy_nginx_service_list %}
     auth_request /_auth;
-    error_page 500 /token-revoked.json;
-
+    error_page 500 /token-revoked.json; 
     proxy_pass http://authenticator-api:5000;
-
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}
     proxy_redirect off;
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
-   
+
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Credentials' 'true';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Mx-ReqToken,X-Requested-With,x-tapis-token';
         return 204;
-    }
+    }    
 }
-
