--- a/playbooks/roles/proxy/templates/kube/nginx/locations/pgrest.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/pgrest.conf
@@ -1,26 +1,19 @@
-
+{% if "pgrest" in proxy_nginx_service_list or site_type == 2 %}
 # pgrest
 location /v3/pgrest
-{            
+{
+{% if "pgrest" in proxy_nginx_service_list %}
+	set $xhost $host;
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
-
-    proxy_pass http://pgrest-api:5000;
-
+{% if proxy_pgrest_custom_block is defined %}
+    {{ proxy_pgrest_custom_block | indent(width=12) }}
+{% endif %}
     proxy_redirect off;
-    proxy_set_header Host $host;
-{%- if custom_host_01 is defined %}
-    # workaround for for custom setups
-    if ($host = '{{ custom_host_01 }}') {
-        proxy_pass {{ custom_host_01_internal }};
-    }
-{%- endif %}
-{%- if custom_host_02 is defined %}
-    # workaround for for custom setups
-    if ($host = '{{ custom_host_02 }}') {
-        proxy_pass {{ custom_host_02_internal }};
-    }
-{%- endif %}
-
+    proxy_set_header Host $xhost;
+    proxy_pass http://pgrest-api:5000;
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}        
 }
-
+{% endif %}
