--- a/playbooks/roles/proxy/templates/kube/nginx/locations/files.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/files.conf
@@ -1,14 +1,14 @@
-
 # files
 location /v3/files
-{            
+{
+{% if "files" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
-
     proxy_pass http://files-api:8080;
-
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}
     proxy_redirect off;
     proxy_set_header Host $host;
     client_max_body_size 50G;
 }
-
