--- a/playbooks/roles/proxy/templates/kube/nginx/locations/jobs.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/jobs.conf
@@ -1,11 +1,13 @@
 # jobs
 location /v3/jobs
-{            
+{
+{% if "jobs" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
-
     proxy_pass http://jobs-api:8080;
-
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}
     proxy_redirect off;
     proxy_set_header Host $host;
 }
