--- a/playbooks/roles/proxy/templates/kube/nginx/locations/streams.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/streams.conf
@@ -1,11 +1,14 @@
+{% if "streams" in proxy_nginx_service_list or site_type == 2 %}
 # streams
 location /v3/streams
-{            
+{
+{% if "streams" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
-
     proxy_pass http://streams-api:5000;
-
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}
     proxy_redirect off;
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
@@ -17,3 +20,4 @@ location /v3/streams
         return 204;
     }
 }
+{% endif %}
