--- a/playbooks/roles/proxy/templates/kube/nginx/locations/tokens.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/tokens.conf
@@ -1,11 +1,13 @@
 # tokens
 location /v3/tokens
-{            
+{
+{% if "tokens" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
-
     proxy_pass http://tokens-api:5000;
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}
     proxy_redirect off;
     proxy_set_header Host localhost:5000;
 }
-
