--- a/playbooks/roles/proxy/templates/docker/locations/apps.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/apps.conf
@@ -4,9 +4,8 @@ location /v3/apps
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
-    # use var to allow nginx to start even if $upstream is down
-    set $upstream http://apps-api:8080;
-    proxy_pass $upstream;
+    
+    proxy_pass http://apps-api:8080;
 
     proxy_redirect off;
     proxy_set_header Host $host;
