--- a/playbooks/roles/proxy/templates/docker/nginx.conf
+++ b/playbooks/roles/proxy/templates/docker/nginx.conf
@@ -36,9 +36,9 @@ stream {
         proxy_timeout          600s;
         access_log /dev/stdout stream_routing;        # cgarcia- Unsure if this entire 'server' block should be in an if, or if we
         # should what I'm doing here.
-        # use var to allow nginx to start even if $upstream is down
-        set $upstream pods-traefik:80;
-        proxy_pass $upstream;
+        
+        proxy_pass pods-traefik:80;
+        
 
     }
 
