--- a/playbooks/roles/proxy/templates/docker/locations/actors.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/actors.conf
@@ -4,9 +4,9 @@ location /v3/actors
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
-    # use var to allow nginx to start even if $upstream is down
-    set $upstream http://actors-nginx:80;
-    proxy_pass $upstream;
+    
+    proxy_pass http://actors-nginx:80;
+    
 
     proxy_redirect off;
     proxy_set_header Host $host;
