--- a/playbooks/roles/proxy/templates/docker/locations/meta.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/meta.conf
@@ -5,9 +5,9 @@ location /v3/meta
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
-    # use var to allow nginx to start even if $upstream is down
-    set $upstream http://meta:8080;
-    proxy_pass $upstream;
+    
+    proxy_pass http://meta:8080;
+    
 
     proxy_redirect off;
     proxy_set_header Host $host;
