possible upstream fix

--- a/playbooks/roles/proxy/templates/docker/locations/apps.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/apps.conf
@@ -1,11 +1,12 @@
 # apps
 location /v3/apps
-{            
+{          
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
-    
-    proxy_pass http://apps-api:8080;
+    resolver 127.0.0.11;
+    set $upstream "http://apps-api:8080;";
+    proxy_pass $upstream;
 
     proxy_redirect off;
     proxy_set_header Host $host;
