--- a/playbooks/roles/proxy/templates/docker/locations/meta.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/meta.conf
@@ -5,9 +5,10 @@ location /v3/meta
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
-    
-    proxy_pass http://meta:8080;
-    
+    resolver 127.0.0.11;
+    set $upstream "http://meta:8080";
+    proxy_pass $upstream;
+
 
     proxy_redirect off;
     proxy_set_header Host $host;
