--- a/playbooks/roles/proxy/templates/docker/locations/notifications.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/notifications.conf
@@ -4,8 +4,9 @@ location /v3/notifications
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
-    
-    proxy_pass http://notifications-api:8080;
+    resolver 127.0.0.11;
+    set $upstream "http://notifications-api:8080";
+    proxy_pass $upstream;
     
 
     proxy_redirect off;
