--- a/playbooks/roles/proxy/templates/docker/locations/pods.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/pods.conf
@@ -2,8 +2,9 @@
 location /v3/pods
 {            
 
-    
-    proxy_pass {{ proxy_service_url }};
+    resolver 127.0.0.11;
+    set $upstream "{{ proxy_service_url }}";
+    proxy_pass $upstream;
     
 
     proxy_redirect off;
