--- a/playbooks/roles/proxy/templates/docker/locations/systems.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/systems.conf
@@ -5,8 +5,9 @@ location /v3/systems
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
-    
-    proxy_pass http://systems-api:8080;
+    resolver 127.0.0.11;
+    set $upstream "http://systems-api:8080";
+    proxy_pass $upstream;
     
 
     proxy_redirect off;
