--- a/playbooks/roles/proxy/templates/docker/locations/actors.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/actors.conf
@@ -4,8 +4,9 @@ location /v3/actors
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
-    
-    proxy_pass http://actors-nginx:80;
+    resolver 127.0.0.11;
+    set $upstream "http://actors-nginx:80";
+    proxy_pass $upstream;
     
 
     proxy_redirect off;
