--- a/playbooks/roles/proxy/templates/docker/locations/authenticator.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/authenticator.conf
@@ -4,8 +4,9 @@ location /v3/oauth2
     auth_request /_auth;
     error_page 500 /token-revoked.json;
 
-    
-    proxy_pass http://authenticator-api:5000;
+    resolver 127.0.0.11;
+    set $upstream "http://authenticator-api:5000";
+    proxy_pass $upstream;
 
     proxy_redirect off;
     proxy_set_header Host $host;
