--- a/playbooks/roles/proxy/templates/docker/locations/files.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/files.conf
@@ -1,12 +1,13 @@
 
 # files
 location /v3/files
-{            
+{
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
-    
-    proxy_pass http://files-api:8080;
+    resolver 127.0.0.11;
+    set $upstream "http://files-api:8080"; 
+    proxy_pass $upstream;
 
     proxy_redirect off;
     proxy_set_header Host $host;
