--- a/playbooks/roles/proxy/templates/docker/locations/globus-proxy.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/globus-proxy.conf
@@ -1,11 +1,10 @@
 # globus-proxy
 location /v3/globus-proxy
 {            
-
+    resolver 127.0.0.11;
+    set $upstream "http://globus-proxy:5000";
+    proxy_pass $upstream;
     
-    proxy_pass http://globus-proxy:5000;
-    
-
     proxy_redirect off;
     proxy_set_header Host $host;
 }
