--- a/playbooks/roles/proxy/templates/docker/locations/jobs.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/jobs.conf
@@ -4,8 +4,9 @@ location /v3/jobs
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
-    
-    proxy_pass http://jobs-api:8080;
+    resolver 127.0.0.11;
+    set $upstream "http://jobs-api:8080";
+    proxy_pass $upstream;
     
 
     proxy_redirect off;
