--- a/playbooks/roles/proxy/templates/docker/locations/site-router.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/site-router.conf
@@ -3,8 +3,9 @@ location /v3/site-router
 {
     # this location intentionally does NOT get an auth_request directive since the site-router endpoints IS the target of auth_request.
 
-    
-    proxy_pass http://site-router:8000;
+    resolver 127.0.0.11;
+    set $upstream "http://site-router:8000";
+    proxy_pass $upstream;
     
     proxy_redirect off;
     proxy_set_header Host $host;
