--- a/playbooks/roles/proxy/templates/docker/locations/sites.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/sites.conf
@@ -5,8 +5,9 @@ location /v3/sites
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
-    
-    proxy_pass http://tenants-api:5000;
+    resolver 127.0.0.11;
+    set $upstream "http://tenants-api:5000";
+    proxy_pass $upstream;
     
 
     proxy_redirect off;
