--- a/playbooks/roles/proxy/templates/docker/locations/streams.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/streams.conf
@@ -4,8 +4,9 @@ location /v3/streams
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
-    
-    proxy_pass http://streams-api:5000;
+    resolver 127.0.0.11;
+    set $upstream "http://streams-api:5000";    
+    proxy_pass $upstream;
     
 
     proxy_redirect off;
