--- a/playbooks/roles/proxy/templates/docker/locations/tenants.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/tenants.conf
@@ -3,8 +3,10 @@ location /v3/tenants
 {            
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
-    
-    proxy_pass http://tenants-api:5000;            
+
+    resolver 127.0.0.11;
+    set $upstream "http://tenants-api:5000";
+    proxy_pass $upstream;            
     
     proxy_redirect off;
     proxy_set_header Host localhost:5000;
