--- a/playbooks/roles/proxy/templates/docker/locations/tokens.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/tokens.conf
@@ -4,8 +4,9 @@ location /v3/tokens
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
-    
-    proxy_pass http://tokens-api:5000;
+    resolver 127.0.0.11;
+    set $upstream "http://tokens-api:5000";
+    proxy_pass $upstream;
     
     proxy_redirect off;
     proxy_set_header Host localhost:5000;
