--- a/playbooks/roles/proxy/templates/docker/locations/workflows.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/workflows.conf
@@ -4,8 +4,9 @@ location /v3/workflows
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
-    
-    proxy_pass http://workflows-api-service:8000;
+    resolver 127.0.0.11;
+    set $upstream "http://workflows-api-service:8000";
+    proxy_pass $upstream;
     
 
     proxy_redirect off;
