--- a/playbooks/roles/vault/templates/docker/docker-compose.yml
+++ b/playbooks/roles/vault/templates/docker/docker-compose.yml
@@ -15,10 +15,9 @@ services:
     environment:
       - VAULT_ADDR=http://0.0.0.0:8200
     volumes:
-      # - '{{ vault_dir }}/vault-config.json:/vault/config/vault.hcl'
-      - '{{ vault_dir }}/vault.hcl:/vault/config/vault.hcl'
-      - '{{ vault_data_dir }}/data:/vault/data'
-      - '{{ tapisdatadir }}/vault/certs:/vault/certs/'
+      - ./vault.hcl:/vault/config/vault.hcl
+      - {{ vault_data_dir }}/data:/vault/data
+      - {{ vault_data_dir }}/certs:/vault/certs
     networks:
       - tapis
 
