--- a/playbooks/generate-single-component.yml
+++ b/playbooks/generate-single-component.yml
@@ -7,6 +7,11 @@
     tapisctl_action: 'generate'
   
   tasks: 
+
+  - name: debug
+    debug:
+      var: tapisflavor 
+
   - name: Set default values for vars
     include_role: 
       name: get_defaults
