--- a/playbooks/roles/systems/templates/docker/docker-compose.yml
+++ b/playbooks/roles/systems/templates/docker/docker-compose.yml
@@ -31,7 +31,7 @@ services:
         env_file:
             {{ tapisdatadir }}/systems/env
         environment:
-            - PGDATA=/pdgata/data
+            - PGDATA=/pgdata/data
         volumes:
             - {{ tapisdatadir }}/systems/postgres:/pgdata
         healthcheck:
