--- a/playbooks/roles/streams/templates/docker/docker-compose.yml
+++ b/playbooks/roles/streams/templates/docker/docker-compose.yml
@@ -48,8 +48,8 @@ services:
   #   ports:
   #     - 5000:5000
   app:
-    container_name: chords_app
-    image: scleveland/tapis-chords-app:0.9.8.2.3
+    container_name: streams-chords-app
+    image: {{ streams_tapis_chords_app_image }}
     #${DOCKER_TAG}
     volumes:
       - mysql-data:/var/lib/mysql
@@ -58,36 +58,39 @@ services:
       - nginx-log:/var/log/nginx
       - rails-log:/chords/log
     environment:
-      - RAILS_ENV=${RAILS_ENV}
-      - CHORDS_ADMIN_PW=${CHORDS_ADMIN_PW}
-      - CHORDS_GUEST_PW=${CHORDS_GUEST_PW}
-      - GRAFANA_ADMIN_PW=${GRAFANA_ADMIN_PW}
-      - GRAFANA_HTTP_PORT=${GRAFANA_HTTP_PORT}
-      - SECRET_KEY_BASE=${SECRET_KEY_BASE}
-      - DB_RETENTION=${DB_RETENTION}
-      - DOCKER_TAG=${DOCKER_TAG}
-      - CHORDS_EMAIL_SERVER=${CHORDS_EMAIL_SERVER}
-      - CHORDS_EMAIL_PORT=${CHORDS_EMAIL_PORT}
-      - CHORDS_EMAIL_ADDRESS=${CHORDS_EMAIL_ADDRESS}
-      - CHORDS_EMAIL_PASSWORD=${CHORDS_EMAIL_PASSWORD}
-      - WORKERS=${WORKERS}
+      - RAILS_ENV=production
+      - CHORDS_ADMIN_PW=chords_ec_demo
+      - CHORDS_GUEST_PW=guest 
+      - GRAFANA_ADMIN_PW=admin
+      - GRAFANA_HTTP_PORT=3000
+      - SECRET_KEY_BASE=aaaaaaaaaaa
+      - DB_RETENTION=inf
+      - DOCKER_TAG=latest
+      - CHORDS_EMAIL_SERVER=smtp.gmail.com
+      - CHORDS_EMAIL_PORT=587
+      - CHORDS_EMAIL_ADDRESS=unknown@gmail.com
+      - CHORDS_EMAIL_PASSWORD=unknown
+      - WORKERS=4
       - CHORDS_MYSQL_HOST=mysql
       - CHORDS_MYSQL_PORT=3306
       - CHORDS_PORTAL_ADMIN_USER=streams@admin.tapis
       - CHORDS_PORTAL_ADMIN_PASSWORD=streamsrealtime
-      - CHORDS_API_KEY=myapitokenkeything
       # Note: INFLUXDB_ variables are used by the Influxer gem, meaning that
       # you should NOT create your own variables beginning with INFLUXDB_.
       - INFLUXDB_USERNAME=admin
-      - INFLUXDB_PASSWORD=${CHORDS_ADMIN_PW}
+      - tapis_base_url={{ streams_service_url }}
+      - alert_secret=testalert
+      - workerCls="gthread"
+ 
+
     command: bash -c "dos2unix ./chords_start.sh && chmod a+x ./chords_start.sh && ./chords_start.sh"
     logging:
       driver: "json-file"
-      options:
+      options:v 
         max-size: "1m"
         max-file: "5"
-    ports:
-        - ${CHORDS_HTTP_PORT}:80
+    # ports:
+    #     - 80:80
     links:
       - mysql
       - influxdb2.1.1
@@ -95,14 +98,14 @@ services:
   # Rails mysql database
   mysql:
     container_name: chords_mysql
-    image: mysql:5.7
+    image: {{ streams_tapis_chords_db_image }}
     volumes:
       - mysql-data:/var/lib/mysql
       - mysql-log:/var/log/mysql
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=1
       - MYSQL_USER=chords_demo_user
-      - MYSQL_PASSWORD=${CHORDS_ADMIN_PW}
+      - MYSQL_PASSWORD=chords_ec_demo
     logging:
       driver: "json-file"
       options:
@@ -143,7 +146,7 @@ services:
     environment:
       - DOCKER_INFLUXDB_INIT_MODE=setup
       - DOCKER_INFLUXDB_INIT_USERNAME=admin
-      - DOCKER_INFLUXDB_INIT_PASSWORD=${CHORDS_ADMIN_PW}
+      - DOCKER_INFLUXDB_INIT_PASSWORD=chords_ec_demo
       - DOCKER_INFLUXDB_INIT_ORG=tapis
       - DOCKER_INFLUXDB_INIT_BUCKET=streams
       - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=myawesometapisoken
@@ -152,9 +155,9 @@ services:
       options:
         max-size: "10m"
         max-file: "5"
-    ports:
-      - 8087:8086
-      - 8084:8083
+    # ports:
+    #   - 8087:8086
+    #   - 8084:8083
 
   # InfluxData kapacitor time series monitoring
   kapacitor:
@@ -165,7 +168,7 @@ services:
       - kapacitor-log:/var/log/kapacitor
     environment:
       # Custom environment variable, used by ncareol/kapacitor
-      - KAPACITOR_ENABLED=${KAPACITOR_ENABLED}
+      - KAPACITOR_ENABLED=true
       #
       - KAPACITOR_HOSTNAME=chords_kapacitor
       - KAPACITOR_LOGGING_LEVEL=INFO
@@ -175,21 +178,21 @@ services:
       #
       - KAPACITOR_INFLUXDB_0_URLS_0=http://chords_influxdb:8086
       - KAPACITOR_INFLUXDB_0_USERNAME=admin
-      - KAPACITOR_INFLUXDB_0_PASSWORD=${CHORDS_ADMIN_PW}
+      - KAPACITOR_INFLUXDB_0_PASSWORD=chords_ec_demo
       #
       - KAPACITOR_SMTP_ENABLED=true
-      - KAPACITOR_SMTP_FROM=${CHORDS_EMAIL_ADDRESS}
-      - KAPACITOR_SMTP_HOST=${CHORDS_EMAIL_SERVER}
-      - KAPACITOR_SMTP_PORT=${CHORDS_EMAIL_PORT}
-      - KAPACITOR_SMTP_USERNAME=${CHORDS_EMAIL_ADDRESS}
-      - KAPACITOR_SMTP_PASSWORD=${CHORDS_EMAIL_PASSWORD}
+      - KAPACITOR_SMTP_FROM=unknown@gmail.com
+      - KAPACITOR_SMTP_HOST=smtp.gmail.com
+      - KAPACITOR_SMTP_PORT=587
+      - KAPACITOR_SMTP_USERNAME=unknown@gmail.com
+      - KAPACITOR_SMTP_PASSWORD=unknown
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "5"
-    ports:
-      - 9092:9092
+    # ports:
+    #   - 9092:9092
     links:
       - app
 
@@ -201,16 +204,16 @@ services:
     # you should not create your own variables beginning with GF_.
     environment:
       - GF_DEFAULT_INSTANCE_NAME=localhost.localdomain
-      - GF_SERVER_HTTP_PORT=${GRAFANA_HTTP_PORT}
+      - GF_SERVER_HTTP_PORT=3000
       - GF_AUTH_ANONYMOUS_ENABLED=true
-      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PW}
+      - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_EMAILS_WELCOME_EMAIL_ON_SIGN_UP=true
       - GF_SMTP_ENABLED=true
-      - GF_SMTP_FROM_ADDRESS=${CHORDS_EMAIL_ADDRESS}
+      - GF_SMTP_FROM_ADDRESS=unknown@gmail.com
       - GF_SMTP_FROM_NAME=CHORDS Grafana
-      - GF_SMTP_HOST=${CHORDS_EMAIL_SERVER}:${CHORDS_EMAIL_PORT}
-      - GF_SMTP_USER=${CHORDS_EMAIL_ADDRESS}
-      - GF_SMTP_PASSWORD=${CHORDS_EMAIL_PASSWORD}
+      - GF_SMTP_HOST=unknown@gmail.com:587
+      - GF_SMTP_USER=unknown@gmail.com
+      - GF_SMTP_PASSWORD=unknown
     volumes:
       - grafana-data:/var/lib/grafana
       - grafana-log:/var/log/grafana
@@ -219,8 +222,8 @@ services:
       options:
         max-size: "10m"
         max-file: "5"
-    ports:
-      - ${GRAFANA_HTTP_PORT}:${GRAFANA_HTTP_PORT}
+    # ports:
+    #   - ${GRAFANA_HTTP_PORT}:${GRAFANA_HTTP_PORT}
     user: "104"
     links:
       - influxdb2.1.1
