--- a/playbooks/roles/proxy/templates/docker/nginx.conf
+++ b/playbooks/roles/proxy/templates/docker/nginx.conf
@@ -106,8 +106,13 @@ http {
         resolver 127.0.0.11 valid=10s;
         resolver_timeout 5s;
 
+{% if "pods" in components_to_deploy %}
         listen 8443 ssl http2;
         listen [::]:8443 ssl http2;
+{% else %}
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+{% endif %}
 
         server_name {{ proxy_nginx_server_name }};
 
