--- a/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
@@ -10,45 +10,49 @@ events {
 }
 
 {% if "pods" in proxy_nginx_service_list %}
-### Everything first goes through this stream stanza. Map matches subdomain to port to route to.
-### If no map found, we route to default 8443. This directs back to HTTP stanza as normal.
+# Everything routes through here. Either goes to Pods or HTTP stanza 
 stream {
-
     log_format stream_routing '$remote_addr [$time_local] '
                               'with SNI name "$ssl_preread_server_name" '
                               'proxying to "$instanceport" '
                               '$protocol $status $bytes_sent $bytes_received '
                               '$session_time';
 
-    # 'map' maps input string to output variable. Regex works.
-    # Ports used are purely random. Feel free to change.
+    # 'map's input request SNI (domain name) to output port.
+    # Ports used are purely random
     map $ssl_preread_server_name $instanceport {
-        # Route TCP with following whatever.pods.whatever.tenant.tapis.io to pods-traefik
-        # proxy_nginx_server_name would be `*.develop.tapis.io`, `*.tapis.io`, etc.
+        # *.pods.tenant.environment.tapis.io routes to pods-traefik
         "~*.pods.{{proxy_nginx_server_name}}"    5510;
-        # Route non-pod things to 8443 (arbitrary port, listened to by http stanza) to follow regular nginx walkthrough
+        # Route non-pod requests to 8443 which is read by http stanza
         "~{{proxy_nginx_server_name}}"           8443;
-        # Else default to 5510
-        default                         8443;
+        # Else default to 5510 which routes to pods (required for Postgres)
+        default                         5510;
     }
  
-    # pods_service. Route TCP to pods-traefik pod.
+    # 'pods_upstream' routes to traefik. Backup is HTTP stanza.
+    # Works even if pods_service is down.
+    upstream pods_upstream {
+        server pods-traefik:80;
+        server 127.0.0.1:8443 backup;
+    }
+
+    # 5510 routes to pod_service traefik pod. Backup is HTTP stanza.
     server {
         listen                 5510;
         ssl_preread            off;
         proxy_timeout          600s;
-        access_log /dev/stdout stream_routing;
-        proxy_pass             pods-traefik:80;
-
+        #access_log /dev/stdout stream_routing; # debug log if needed
+        proxy_pass             pods_upstream;
+        proxy_next_upstream    on;
     }
 
     # Listen for all incoming requests. Preread server name (for mapping). Then pass. 
     server {
         listen                  443;
         ssl_preread             on;
-        proxy_connect_timeout   20s;  # max time to connect to pserver
         proxy_timeout           600s;
-        access_log /dev/stdout stream_routing;
+        proxy_connect_timeout   20s;  # max time to connect to pserver
+        #access_log /dev/stdout stream_routing;
         proxy_pass              127.0.0.1:$instanceport;
     }
 }
