--- a/playbooks/roles/files/templates/docker/docker-compose.yml
+++ b/playbooks/roles/files/templates/docker/docker-compose.yml
@@ -82,9 +82,9 @@ services:
     env_file: 
       - {{ tapisdatadir }}/files/env
     environment:
-      {% if jobs_node_name == true -%}
-      - TAPIS_LOCAL_NODE_NAME=spec.nodeName
-      {% endif -%}
+{% if files_node_name == true %}
+      - TAPIS_LOCAL_NODE_NAME={{ global_tapis_domain }}
+{% endif %}
       - TAPIS_SITE_ID={{ files_service_site_id }}
       - TOKENS_SERVICE_URL={{ files_service_url }}
       - TENANTS_SERVICE_URL={{ files_service_url}}
@@ -113,9 +113,9 @@ services:
     env_file:
       - {{ tapisdatadir }}/files/env
     environment:
-      {% if jobs_node_name == true -%}
-      - TAPIS_LOCAL_NODE_NAME=spec.nodeName
-      {% endif -%}
+{% if files_node_name == true %}
+      - TAPIS_LOCAL_NODE_NAME={{ global_tapis_domain }}
+{% endif %}
       - TAPIS_SITE_ID={{ files_service_site_id }}
       - TOKENS_SERVICE_URL={{ files_service_url }}
       - TENANTS_SERVICE_URL={{ files_service_url}}
