--- a/playbooks/roles/proxy/templates/docker/locations/meta.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/meta.conf
@@ -6,7 +6,7 @@ location /v3/meta
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
-    set $upstream "http://meta:8080";
+    set $upstream "http://restheart-security:8080";
     proxy_pass $upstream;
 
 
