--- a/playbooks/roles/tokens/templates/docker/docker-compose.yml
+++ b/playbooks/roles/tokens/templates/docker/docker-compose.yml
@@ -15,4 +15,4 @@ services:
         networks:
             - tapis
         env_file: 
-            - "{{ tapisdatadir }}/tokens/env"
+            - {{ tapisdatadir }}/tokens/env
