--- a/playbooks/roles/get_defaults/defaults/main/vars.yml
+++ b/playbooks/roles/get_defaults/defaults/main/vars.yml
@@ -16,7 +16,7 @@ components_to_deploy_default:
   - files
   - globus-proxy
   - jobs
-#  - meta
+  - meta
 #  - monitoring
   - notifications
 #  - pgrest
@@ -24,7 +24,7 @@ components_to_deploy_default:
   - proxy
   - security
   - skadmin
-#  - streams
+  - streams
   - systems
   - tapisui
   - tenants
