Adding suggestions from demo/review

--- a/playbooks/roles/test-resources/templates/docker/ssh/Dockerfile.ssh
+++ b/playbooks/roles/test-resources/templates/docker/ssh/Dockerfile.ssh
@@ -1,4 +1,4 @@
-FROM rastasheep/ubuntu-sshd:18.04
+FROM tapis/slurm-sshd:1
 
 RUN useradd --create-home --shell /bin/bash testuser
 RUN echo 'testuser:password' | chpasswd
