--- a/playbooks/roles/test-resources/templates/docker/docker-compose.yml
+++ b/playbooks/roles/test-resources/templates/docker/docker-compose.yml
@@ -12,7 +12,7 @@ networks:
 services:
   minio:
     container_name: minio-1
-    image: minio/minio:RELEASE.2023-10-24T21-42-22Z.fips
+    image: minio/minio:RELEASE.2023-10-25T06-33-25Z
     environment:
       - MINIO_ACCESS_KEY={{ test_resources_minio_1_user }}
       - MINIO_SECRET_KEY={{ test_resources_minio_1_password }}
